act details yine
angularjse sokam

--- a/app/src/act-details/act-details.template.html
+++ b/app/src/act-details/act-details.template.html
@@ -54,24 +54,28 @@
                                 <div layout="column">
                                     <div flex="50" class="pt-1">
                                         <h2 class = "text-xl font-bold">Fiyatlar:</h2>
-                                        <div class="border border-indigo-500 rounded-lg" layout = "row" layout-align="start center">
+                                        <div class="border border-indigo-500 rounded-lg" layout = "column " layout-gt-sm="row" layout-align="start none" layout-align-gt-sm="start center">
                                             <div>
                                                 <md-input-container class="my-1">
                                                     <md-select ng-model="selectedOption">
-                                                    <md-option  ng-repeat="fiyat in $ctrl.fiyatlar" ng-selected="fiyat.campaign == null" ng-value="{{fiyat}}" ng-if="fiyat.campaign == null">{{fiyat.category}}</md-option>
+                                                    <md-option  ng-repeat="fiyat in $ctrl.fiyatlar | unique: 'category'" ng-selected="fiyat.campaign == null" ng-value="{{fiyat}}" ng-show="fiyat.campaign == null">{{fiyat.category}}</md-option>
                                                     </md-select>
                                                 </md-input-container>
                                             </div>
-                                            <div>
-                                                <md-input-container class="my-1">
-                                                    <md-select ng-model="selectedOption5">
-                                                        <md-option  ng-repeat="fiyat in $ctrl.fiyatlar"  ng-selected="fiyat.campaign == null && fiyat.category == selectedOption.category" ng-value="{{fiyat}}" ng-if="fiyat.campaign == null && fiyat.category == selectedOption.category">{{fiyat.name}}</md-option>
-                                                    </md-select>
+                                            <div flex="grow" layout="row" layout-align="start center"> 
+                                                <div>
+                                                    <md-input-container class="my-1">
+                                                        <md-select ng-model="selectedOption5">
+                                                            <md-option  ng-repeat="fiyat in $ctrl.fiyatlar"  ng-selected="fiyat.campaign == null && fiyat.category == selectedOption.category" ng-value="{{fiyat}}" ng-show="fiyat.campaign == null && fiyat.category == selectedOption.category">{{fiyat.name}}</md-option>
+                                                        </md-select>
+                                                    </md-input-container> 
                                                 </md-input-container> 
-                                            </div>
-                                            <div flex="" layout-align="end none">
-                                                <div class="bg-blue-700 rounded-lg">
-                                                        <p class="text-4xl text-white px-1">{{selectedOption5.price}}</p>
+                                                    </md-input-container> 
+                                                </div>
+                                                <div flex="" layout-align="end none">
+                                                    <div class="bg-blue-700 rounded-lg">
+                                                            <p class="text-4xl text-white px-1">{{selectedOption5.price}}</p>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -82,27 +86,29 @@
                                             <div>
                                             <md-input-container class="my-1">
                                                 <md-select ng-model="selectedOption2">
-                                                    <md-option  ng-repeat="fiyat2 in $ctrl.fiyatlar"  ng-selected="fiyat2.campaign != null" ng-value="{{fiyat2}}" ng-show="fiyat2.campaign != null">{{fiyat2.campaign}}</md-option>
+                                                    <md-option  ng-repeat="fiyat2 in $ctrl.fiyatlar | unique: 'campaign'"  ng-selected="fiyat2.campaign != null" ng-value="{{fiyat2}}" ng-show="fiyat2.campaign != null">{{fiyat2.campaign}}</md-option>
                                                 </md-select>
                                             </md-input-container>
                                             </div>
                                             <div>
                                                 <md-input-container class="my-1">
                                                     <md-select ng-model="selectedOption3">
-                                                        <md-option  ng-repeat="fiyat3 in $ctrl.fiyatlar"  ng-selected="fiyat3.campaign == selectedOption2.campaign" ng-value="{{fiyat3}}" ng-if="fiyat3.campaign == selectedOption2.campaign">{{fiyat3.category}}</md-option>
+                                                        <md-option  ng-repeat="fiyat3 in $ctrl.fiyatlar | unique: 'category'"  ng-selected="$first" ng-value="{{fiyat3}}">{{fiyat3.category}}</md-option>
                                                     </md-select>
                                                 </md-input-container> 
                                             </div>
-                                            <div>
-                                                <md-input-container class="my-1">
-                                                    <md-select ng-model="selectedOption4">
-                                                        <md-option  ng-repeat="fiyat4 in $ctrl.fiyatlar"  ng-selected="selectedOption3.category == fiyat4.category && selectedOption2.campaign == fiyat4.campaign" ng-value="{{fiyat4}}" ng-if="selectedOption3.category == fiyat4.category && selectedOption2.campaign == fiyat4.campaign">{{fiyat4.name}}</md-option>
-                                                    </md-select>
-                                                </md-input-container>
-                                            </div>
-                                            <div flex="" layout-align="end none">
-                                                <div class="bg-blue-700 rounded-lg">
-                                                    <p class="text-4xl text-white px-1">{{selectedOption4.price}}</p>
+                                            <div flex="grow" layout="row" layout-align="start center">
+                                                <div>
+                                                    <md-input-container class="my-1">
+                                                        <md-select ng-model="selectedOption4">
+                                                            <md-option  ng-repeat="fiyat4 in $ctrl.fiyatlar"  ng-selected="selectedOption3.category == fiyat4.category && selectedOption2.campaign == fiyat4.campaign" ng-value="{{fiyat4}}" ng-show="selectedOption3.category == fiyat4.category && selectedOption2.campaign == fiyat4.campaign">{{fiyat4.name}}</md-option>
+                                                        </md-select>
+                                                    </md-input-container>
+                                                </div>
+                                                <div flex="" layout-align="end none">
+                                                    <div class="bg-blue-700 rounded-lg">
+                                                        <p class="text-4xl text-white px-1">{{selectedOption4.price}}</p>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
