--- a/app/src/filter-segment/filter-segment.template.html
+++ b/app/src/filter-segment/filter-segment.template.html
@@ -38,7 +38,10 @@
                                 filter:$ctrl.cityInput">{{city}}</md-option>
                         </md-optgroup>
             </md-select>
-           
+           <md-button class = "md-button md-primary" ng-click = "$ctrl.filter()">
+               GO!
+           </md-button>
         </md-input-container>
+        
     </md-card>
 </div>
