results window closes properly on large. Gonna work on mobile

--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -38,7 +38,7 @@
           </div>
         </md-content>
 
-        <div class="relative w-full bg-gray-300" style="top: 0.5rem" ng-if="$ctrl.searchResults.length != 0">
+        <div class="relative w-full bg-gray-300" style="top: 0.5rem" ng-if="$ctrl.searchResults.length != 0" id = "results">
           <md-list flex layout="column">
 
             <div ng-repeat="result in $ctrl.searchResults">
