--- a/app/src/index.html
+++ b/app/src/index.html
@@ -9,9 +9,41 @@
     <link rel="manifest" href="/manifest.json" />
 
 </head>
-
 <body>
     <container></container>
 </body>
+
+<script>
+
+    function toggle_display(){
+        var elm = document.getElementById("results");
+        if(elm.style.display == "none"){
+            elm.style.display = "block";
+        }else{
+            elm.style.display = "none";
+        }
+    }
+
+    document.addEventListener("click", evt => {
+    const flyoutElement = document.getElementById("results");
+    const searchlarge = document.getElementById("search-large");
+    let targetElement = evt.target; // clicked element
+
+    do {
+        if (targetElement == flyoutElement || targetElement == searchlarge) {
+            // This is a click inside. Do nothing, just return.
+            toggle_display();
+            console.log("içeri tıklandı");
+            return;
+        }
+        // Go up the DOM
+        targetElement = targetElement.parentNode;
+    } while (targetElement);
+
+    // This is a click outside.
+    console.log("dışarı tıklandı")
+    toggle_display();
+});
+</script>
 
 </html>
