--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -163,7 +163,7 @@
       </div>
     </div>
 
-    <div class="relative w-full bg-gray-300" style="top: 0.5rem" ng-if="$ctrl.searchResults.length != 0" id = "results-small">
+    <div class="relative w-full bg-gray-300" ng-if="$ctrl.searchResults.length != 0" id = "results-small">
       <md-list flex layout="column">
 
         <div ng-repeat="result in $ctrl.searchResults">
