--- a/app/src/main-content/main-content.template.html
+++ b/app/src/main-content/main-content.template.html
@@ -8,7 +8,8 @@
                 <div class="w-4/5 xs:w-9/12 mx-auto sm:w-1/2 sm:mx-0 md:h-58 md:w-58 lg:h-64 lg:w-64 xxl:h-64 xxl:w-64 xxxl:w-72 xxxl:w-72 mb-3"  ng-repeat="act in $ctrl.acts">
                     <md-card>
                         <div class="h-32 bg-gray-800"
-                            ng-style="{'background-image': 'url('+ act.image +')', 'background-repeat': 'no-repeat', 'background-position': 'center center', 'background-size': 'cover'}">
+                            ng-style="{'background-image': 'url('+ act.image_url +')', 'background-repeat': 'no-repeat', 'background-position': 'center center', 'background-size': 'cover'}">
+                            
                         </div>
                         <div class="flex flex-col p-2">
                             
