--- a/app/src/act-details/act-details.template.html
+++ b/app/src/act-details/act-details.template.html
@@ -64,7 +64,7 @@
                                             <div>
                                                 <md-input-container class="my-1">
                                                     <md-select ng-model="selectedOption5">
-                                                        <md-option  ng-repeat="fiyat in $ctrl.fiyatlar"  ng-selected="fiyat.campaign == null && fiyat.category == selectedOption.category" ng-value="{{fiyat}}" ng-show="fiyat.campaign == null && fiyat.category == selectedOption.category">{{fiyat.name}}</md-option>
+                                                        <md-option  ng-repeat="fiyat in $ctrl.fiyatlar"  ng-selected="fiyat.campaign == null && fiyat.category == selectedOption.category" ng-value="{{fiyat}}" ng-show="fiyat.campaign == null && fiyat.category == selectedOption.category">{{fiyat.subcategory}}</md-option>
                                                     </md-select>
                                                 </md-input-container> 
                                             </div>
