navigasyonu düzelttim, kartların görünümündeki tarih şeylerini düzelttim

--- a/app/src/filter-segment/filter-segment.template.html
+++ b/app/src/filter-segment/filter-segment.template.html
@@ -8,7 +8,7 @@
                 md-contact-name="name" 
                 md-contact-image="image"
                 md-require-match="true"
-                placeholder="Kategori Seç">
+                placeholder="{{$ctrl.searchMessage}}">
                 </md-contact-chips>
             </div>
             <div class="py-1">
