--- a/app/src/container/container.template.html
+++ b/app/src/container/container.template.html
@@ -6,11 +6,14 @@
             <div class="w-full h-full flex justify-start flex-col">
                 <div ng-repeat="cat in $ctrl.cats">
                     <div class="flex flex-col flex-initial items-center">
-                        <md-button class="md-button" style="margin:0; padding:4px"
-                            ng-click="$ctrl.filter_types('Müzik', null)">
-                            <md-icon md-svg-icon="{{cat.icon}}"></md-icon>
-                            <p class="text-xs font-normal normal-case">{{cat.type}}</p>
-                        </md-button>
+                        <a href = "#!/arama">
+                            <md-button class="md-button" style="margin:0; padding:4px"
+                                ng-click="$ctrl.filter_types('Müzik', null)">
+                                <md-icon md-svg-icon="{{cat.icon}}"></md-icon>
+                                <p class="text-xs font-normal normal-case">{{cat.type}}</p>
+                            </md-button>
+                        </a>
+
                     </div>
                 </div>
 
