--- a/app/src/container/container.template.html
+++ b/app/src/container/container.template.html
@@ -8,7 +8,7 @@
                     <div class="flex flex-col flex-initial items-center">
                         <a href = "#!/arama">
                             <md-button class="md-button" style="margin:0; padding:4px"
-                                ng-click="$ctrl.filter_types('Müzik', null)">
+                                ng-click="$ctrl.filter_types(cat.type, null)">
                                 <md-icon md-svg-icon="{{cat.icon}}"></md-icon>
                                 <p class="text-xs font-normal normal-case">{{cat.type}}</p>
                             </md-button>
