--- a/app/src/act-card/act-card.template.html
+++ b/app/src/act-card/act-card.template.html
@@ -16,7 +16,7 @@
     </div>
     
     <div class="flex flex-row justify-between float-right">
-        <a href="#!/etkinlik/{{$ctrl.eventId}}/{{$ctrl.place}}">
+        <a href="#!/etkinlik/{{$ctrl.eventId}}/{{$ctrl.place ? $ctrl.place : 'NONE'}}">
             <md-button class="md-button" ng-click="$ctrl.get_details($ctrl.eventId)">DETAY</md-button>
         </a>
         <md-button class="md-icon-button h-1 w-1 self-center">
