--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -220,7 +220,7 @@
             <div class="w-full text-center self-center mr-4 p-1">
               <a href="#!/arama">
                 <md-button class="md-button flex flex-row"
-                  ng-click="$ctrl.filter_types(null, null, type.name, subtype.name)"
+                  ng-click="$ctrl.filter_types(type.name, subtype.name)"
                   style="display: flex !important; width: 80% !important; margin: auto !important">
                   <p class="self-center ml-8">{{subtype.name}}</p>
                 </md-button>
