the acts are retrieved in main-content

--- a/app/src/act-details/act-details.template.html
+++ b/app/src/act-details/act-details.template.html
@@ -2,7 +2,7 @@
     <div class="bg-gray-500 container" flex="66" flex-sm="100" flex-xs="100">
         <md-card>
             <div class="h-56 md:h-72 xl:h-96 bg-gray-800"
-                ng-style="{'background-image': 'url('+ $ctrl.act.image_url +')', 'background-repeat': 'no-repeat', 'background-position': 'center center', 'background-size': 'cover'}">
+                ng-style="{'background-image': 'url('+ $ctrl.event.image_url +')', 'background-repeat': 'no-repeat', 'background-position': 'center center', 'background-size': 'cover'}">
             </div>
 
 
