--- a/app/src/main-content/main-content.template.html
+++ b/app/src/main-content/main-content.template.html
@@ -6,9 +6,9 @@
         <div flex="70" flex-lg="70" flex-md = "60" flex-xl="80" flex-sm="100" flex-xs="100" class="min-h-screen xl:pr-16 h-auto">
             <div class="flex flex-wrap" ng-if = "!$ctrl.showPlaces">
                 <div class="w-4/5 xs:w-9/12 mx-auto sm:w-1/2 sm:mx-0 md:h-58 md:w-58 lg:h-64 lg:w-64 xxl:h-64 xxl:w-64 xxxl:w-72 xxxl:w-72 mb-3"  ng-repeat="act in $ctrl.acts">
-                    <act-card title = "{{$ctrl.trim_name(act.name)}}" subtitle = "{{act.place}}" day-of-month = "{{$ctrl.get_gunSayi(act.date)}}" 
+                    <act-card title = "$ctrl.trim_name(act.name)" subtitle = "{{$ctrl.get_subtitle(act)}}" day-of-month = "{{$ctrl.get_gunSayi(act.date)}}" 
                     month = "{{$ctrl.get_ay(act.date)}}" event-id = "{{act.event_id}}" image-url = "{{act.image_url}}" 
-                    place = "{{act.place}}" show-top-left= "true"></act-card>
+                    date = "{{act.date}}" show-top-left= "false" place = "NONE"></act-card>
                 </div>
             </div>
             <ul ng-if = "$ctrl.showPlaces">
@@ -20,7 +20,7 @@
                       <div class = "flex flex-row w-full bg-white overflow-y-scroll" ng-if = "$index === $ctrl.selectedIndex">
                         <div ng-repeat="act in $ctrl.acts" class="w-4/5 xs:w-9/12 mx-auto sm:w-1/2 sm:mx-0 md:h-58 md:w-58 lg:h-64 lg:w-64 xxl:h-64 xxl:w-64 xxxl:w-72 xxxl:w-72 mb-3">
                             <act-card title = "{{$ctrl.trim_name(act.name)}}" subtitle = "" day-of-month = "{{$ctrl.get_gunSayi(act.first_date)}}"
-                             month = "{{$ctrl.get_ay(act.first_date)}}" event-id = "{{act.event_id}}" image-url = "{{act.image_url}}" 
+                             month = "{{$ctrl.get_ay(act.first_date)}}" event-id = "{{act.event_id}}" image-url = "{{act.image_url}}" date = "NONE"
                              place = "{{$ctrl.bitistir(place.place)}}" show-top-left= "false"></act-card>
                         </div>
                       </div> 
