--- a/app/src/main-content/main-content.template.html
+++ b/app/src/main-content/main-content.template.html
@@ -4,6 +4,15 @@
             <filter-segment></filter-segment>
         </div>
         <div flex="70" flex-lg="70" flex-md = "60" flex-xl="80" flex-sm="100" flex-xs="100" class="min-h-screen xl:pr-16 h-auto">
+            <div class = "flex flex-row bg-gray-200 h-16" ng-if = "!($ctrl.type == 'Sinema')">
+                <md-input-container>
+                    <md-select ng-model = "$ctrl.selectedPage" ng-change = "$ctrl.select_page($ctrl.selectedPage)">
+                        <md-option ng-repeat = "page_num in $ctrl.pages" value = "{{page_num}}">
+                            {{page_num}}
+                        </md-option>
+                    </md-select>
+                </md-input-container>
+            </div>
             <div class="flex flex-wrap" ng-if = "!$ctrl.showPlaces">
                 <div class="w-4/5 xs:w-9/12 mx-auto sm:w-1/2 sm:mx-0 md:h-58 md:w-58 lg:h-64 lg:w-64 xxl:h-64 xxl:w-64 xxxl:w-72 xxxl:w-72 mb-3"  ng-repeat="act in $ctrl.acts">
                     <act-card title = "$ctrl.trim_name(act.name)" subtitle = "{{$ctrl.get_subtitle(act)}}" day-of-month = "{{$ctrl.get_gunSayi(act.date)}}" 
