--- a/app/src/container/container.template.html
+++ b/app/src/container/container.template.html
@@ -6,7 +6,7 @@
             <div class="w-full h-full flex justify-start flex-col">
                 <div ng-repeat="cat in $ctrl.cats">
                     <div class="flex flex-col flex-initial items-center">
-                        <a href = "#!/arama/{{cat.type}}/{{'NONE'}}/{{'NONE'}}">
+                        <a href = "#!/arama/{{cat.type}}/{{'NONE'}}/{{'NONE'}}/page_num/1">
                             <md-button class="md-button" style="margin:0; padding:4px"
                                 ng-click="null">
                                 <md-icon md-svg-icon="{{cat.icon}}"></md-icon>
