applied pages to search by text

--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -206,8 +206,8 @@
         <div ng-repeat="type in $ctrl.types">
           <div class="h-px bg-gray-500 mb-1"></div>
           <div class="w-full text-center self-center mr-4 p-1">
-            <a href="#!/arama">
-              <md-button class="md-button flex flex-row" ng-click="$ctrl.filter_types(type.name, null)"
+            <a href="#!/arama/{{type.name}}/{{'NONE'}}/{{'NONE'}}/page_num/1">
+              <md-button class="md-button flex flex-row" 
                 style="display: flex !important; width: 100% !important; margin: auto !important">
                 <md-icon md-svg-icon="{{type.icon}}" style="margin: 0px !important;"></md-icon>
                 <p class="self-center ml-8">{{type.name}}</p>
@@ -218,9 +218,8 @@
           <div ng-if="type.subtypes" class="h-px bg-gray-500 mb-1"></div>
           <div ng-repeat="subtype in type.subtypes">
             <div class="w-full text-center self-center mr-4 p-1">
-              <a href="#!/arama">
+              <a href="#!/arama/{{type.name}}/{{subtype.name}}/{{'NONE'}}/page_num/1">
                 <md-button class="md-button flex flex-row"
-                  ng-click="$ctrl.filter_types(type.name, subtype.name)"
                   style="display: flex !important; width: 80% !important; margin: auto !important">
                   <p class="self-center ml-8">{{subtype.name}}</p>
                 </md-button>
