--- a/app/src/container/container.template.html
+++ b/app/src/container/container.template.html
@@ -6,13 +6,13 @@
             <div class="w-full h-full flex justify-start flex-col">
                 <div ng-repeat="cat in $ctrl.cats">
                     <div class="flex flex-col flex-initial items-center">
-                        <a href = "#!/arama/{{cat.type}}/{{'NONE'}}/{{'NONE'}}/page_num/1">
+                        
                             <md-button class="md-button" style="margin:0; padding:4px"
-                                ng-click="null">
+                                ng-click="$ctrl.filter_types(cat.type)">
                                 <md-icon md-svg-icon="{{cat.icon}}"></md-icon>
                                 <p class="text-xs font-normal normal-case">{{cat.type}}</p>
                             </md-button>
-                        </a>
+
 
                     </div>
                 </div>
