--- a/app/src/main-content/main-content.template.html
+++ b/app/src/main-content/main-content.template.html
@@ -21,13 +21,13 @@
                 </div>
             </div>
             <ul ng-if = "$ctrl.showPlaces">
-                <li ng-repeat = "place in $ctrl.places" class = "md-2-line border-black rounded-lg my-3 text-white font-bold" layout = "column" ng-click = "$ctrl.toggle_actsOfplace($index, place.place)">
-                    <div class="md-list-item-text p-2" style = "background-color: rgb(33,150,243);">
+                <li ng-repeat = "place in $ctrl.places" class = "md-2-line border-black rounded-lg my-3 text-white font-bold" layout = "column">
+                    <div class="md-list-item-text p-2" ng-click = "$ctrl.toggle_actsOfplace($index, place.place)" style = "background-color: rgb(33,150,243);">
                         <h3>{{ place.place }}</h3>
                         <h4>Yer ismi</h4>
                       </div>
                       <div class = "flex flex-row w-full bg-white overflow-y-scroll" ng-if = "$index === $ctrl.selectedIndex">
-                        <div ng-repeat="act in $ctrl.acts" class="w-4/5 xs:w-9/12 mx-auto sm:w-1/2 sm:mx-0 md:h-58 md:w-58 lg:h-64 lg:w-64 xxl:h-64 xxl:w-64 xxxl:w-72 xxxl:w-72 mb-3">
+                        <div ng-repeat="act in $ctrl.acts">
                             <act-card title = "$ctrl.trim_name(act.name)" subtitle = "" day-of-month = "{{$ctrl.get_gunSayi(act.first_date)}}"
                              month = "{{$ctrl.get_ay(act.first_date)}}" event-id = "{{act.event_id}}" image-url = "{{act.image_url}}" date = "NONE"
                              place = "{{$ctrl.bitistir(place.place)}}" show-top-left= "false"></act-card>
