city doesnt change after refreshing

--- a/app/src/act-details/act-details.template.html
+++ b/app/src/act-details/act-details.template.html
@@ -11,7 +11,7 @@
                     <span class="md-headline">{{$ctrl.event.name}}</span>
                     <div layout="row">
                         <md-icon md-svg-icon="{{$ctrl.icon.sehir}}" style="margin: 0px !important;"></md-icon>
-                        <p class="text-sm my-auto"> : {{$ctrl.selectedInstance.city}}</p>
+                        <p class="text-sm my-auto"> : {{$ctrl.city}}</p>
                     </div>
 
                 </md-card-title-text>
