--- a/app/src/act-details/act-details.template.html
+++ b/app/src/act-details/act-details.template.html
@@ -143,7 +143,7 @@
 
 
             <md-card-actions layout="row" layout-align="end center">
-                <a href="{{$ctrl.selectedInstance.url}}">
+                <a href="{{$ctrl.selectedInstance.url}}" target = "_blank">
                     <md-button>BİLET AL</md-button>
                 </a>
 
